[package]
name = "phy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.20"
rayon = "1.5"
hashbrown = "0.12"

[dev-dependencies]
bevy = "0.7"
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "benches"
harness = false
