[package]
name = "phy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.22"
rayon = "1.5"
hashbrown = "0.13"
bevy = { version = "0.9", default-features = false, optional = true }

[dev-dependencies]
bevy = { version = "0.9", default-features = false, features = [
    "render",
    "bevy_asset",
    "bevy_winit",
] }
criterion = { version = "0.4", features = ["html_reports"] }

[features]
default = ["bevy_integration"]
bevy_integration = ["bevy"]

[[bench]]
name = "benches"
harness = false
